--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -1,11 +1,12 @@
 ---
+
 ---
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
+    <title>My SpaceBlog - Registrarse</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; text-align: center; background: #8e44ad; color: white; }
         .container { width: 300px; margin: auto; padding: 20px; background: rgba(0,0,0,0.7); margin-top: 100px; border-radius: 10px; }
@@ -29,5 +30,7 @@
         </form>
         <a href="/"><button class="btn-back">Regresar a Inicio</button></a>
     </div>
+
+    <script src="/src/scripts/register"></script>
 </body>
 </html>
