--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-export let title = "Mi Blog";
+export let title = "My SpaceBlog";
 ---
 
 <header class="fixed top-0 left-0 w-full bg-black bg-opacity-70 backdrop-blur-md text-white py-4 border-b-2 border-white shadow-lg z-50">
@@ -7,14 +7,18 @@ export let title = "Mi Blog";
 
     <!-- Logo y Título -->
     <div class="flex items-center space-x-4">
-      <img src="/logo.png" alt="Logo" class="h-12 w-12 rounded-full">
-      <h1 class="text-2xl font-semibold tracking-wide">{ title }</h1>
+      <img src="/public/assets/space.png" alt="Logo" class="logo">
+      
+    </div>
+    <div>
+      <h2 class="text-2xl font-semibold tracking-wide">{ title }</h2>
     </div>
 
     <!-- Menú de navegación -->
     <nav>
       <ul class="flex gap-6 text-lg font-medium">
-        <li><a href="#" class="hover:text-blue-400 transition duration-300">Inicio</a></li>
+        <li><a href="./" class="hover:text-blue-400 transition duration-300">Inicio</a></li>
+        <li><a href="/blogs" class="hover:text-blue-400 transition duration-300">Blogs</a></li>
         <li><a href="#" class="hover:text-blue-400 transition duration-300">About Us</a></li>
         <li><a href="#" class="hover:text-blue-400 transition duration-300">Community</a></li>
         <li><a href="#" class="hover:text-blue-400 transition duration-300">Contacto</a></li>
@@ -31,6 +35,7 @@ export let title = "Mi Blog";
     backdrop-filter: blur(5px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     animation: fadeInDown 0.8s ease-out;
+    color: #dfebf7;
   }
 
   /* Espaciado adecuado entre los elementos */
@@ -73,5 +78,11 @@ export let title = "Mi Blog";
 
   nav a:hover {
     color: #4f9cf9;
+  }
+
+  .logo {
+    width: 80px;   /* Ajusta el ancho del logo */
+    height: 80px;  /* Ajusta la altura del logo */
+    
   }
 </style>
